// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checkbox test suite it renders correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Checkbox
    id="test"
    label="test"
    size={100}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <styled.input
          disabled={false}
          id="test"
          model={undefined}
          type="checkbox"
        />,
        <styled.span
          disabled={false}
          labelBeforeCheckbox={false}
          size={100}
        >
          <styled.span>
            <Unknown
              height={50}
            />
          </styled.span>
        </styled.span>,
        " ",
        "test",
      ],
      "disabled": false,
      "htmlFor": "test",
      "leftPadding": 25,
      "rightPadding": 0,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": null,
        "nodeType": "class",
        "props": Object {
          "disabled": false,
          "id": "test",
          "model": undefined,
          "type": "checkbox",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "class",
        "props": Object {
          "children": <styled.span>
            <Unknown
              height={50}
            />
          </styled.span>,
          "disabled": false,
          "labelBeforeCheckbox": false,
          "size": 100,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "children": <Unknown
              height={50}
            />,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": null,
            "nodeType": "function",
            "props": Object {
              "height": 50,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
      " ",
      "test",
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <styled.input
            disabled={false}
            id="test"
            model={undefined}
            type="checkbox"
          />,
          <styled.span
            disabled={false}
            labelBeforeCheckbox={false}
            size={100}
          >
            <styled.span>
              <Unknown
                height={50}
              />
            </styled.span>
          </styled.span>,
          " ",
          "test",
        ],
        "disabled": false,
        "htmlFor": "test",
        "leftPadding": 25,
        "rightPadding": 0,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "disabled": false,
            "id": "test",
            "model": undefined,
            "type": "checkbox",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "children": <styled.span>
              <Unknown
                height={50}
              />
            </styled.span>,
            "disabled": false,
            "labelBeforeCheckbox": false,
            "size": 100,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": null,
            "nodeType": "class",
            "props": Object {
              "children": <Unknown
                height={50}
              />,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": null,
              "nodeType": "function",
              "props": Object {
                "height": 50,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
        " ",
        "test",
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`checkbox test suite it renders correctly with RRF controls 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Checkbox
    modelPath="test"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Styled(Component)
          disabled={false}
          id=""
          model="test"
          type="checkbox"
        />,
        <styled.span
          disabled={false}
          labelBeforeCheckbox={false}
          size={undefined}
        >
          <styled.span>
            <Unknown
              height={NaN}
            />
          </styled.span>
        </styled.span>,
        " ",
        undefined,
      ],
      "disabled": false,
      "htmlFor": "",
      "leftPadding": 25,
      "rightPadding": 0,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": null,
        "nodeType": "class",
        "props": Object {
          "disabled": false,
          "id": "",
          "model": "test",
          "type": "checkbox",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "class",
        "props": Object {
          "children": <styled.span>
            <Unknown
              height={NaN}
            />
          </styled.span>,
          "disabled": false,
          "labelBeforeCheckbox": false,
          "size": undefined,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "children": <Unknown
              height={NaN}
            />,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": null,
            "nodeType": "function",
            "props": Object {
              "height": NaN,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
      " ",
      undefined,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Styled(Component)
            disabled={false}
            id=""
            model="test"
            type="checkbox"
          />,
          <styled.span
            disabled={false}
            labelBeforeCheckbox={false}
            size={undefined}
          >
            <styled.span>
              <Unknown
                height={NaN}
              />
            </styled.span>
          </styled.span>,
          " ",
          undefined,
        ],
        "disabled": false,
        "htmlFor": "",
        "leftPadding": 25,
        "rightPadding": 0,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "disabled": false,
            "id": "",
            "model": "test",
            "type": "checkbox",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "children": <styled.span>
              <Unknown
                height={NaN}
              />
            </styled.span>,
            "disabled": false,
            "labelBeforeCheckbox": false,
            "size": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": null,
            "nodeType": "class",
            "props": Object {
              "children": <Unknown
                height={NaN}
              />,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": null,
              "nodeType": "function",
              "props": Object {
                "height": NaN,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
        " ",
        undefined,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`checkbox test suite it renders correctly with label before checkbox 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Checkbox
    id="test"
    label="test"
    labelBeforeCheckbox={true}
    size={100}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <styled.input
          disabled={false}
          id="test"
          model={undefined}
          type="checkbox"
        />,
        <styled.span
          disabled={false}
          labelBeforeCheckbox={true}
          size={100}
        >
          <styled.span>
            <Unknown
              height={50}
            />
          </styled.span>
        </styled.span>,
        " ",
        "test",
      ],
      "disabled": false,
      "htmlFor": "test",
      "leftPadding": 0,
      "rightPadding": 25,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": null,
        "nodeType": "class",
        "props": Object {
          "disabled": false,
          "id": "test",
          "model": undefined,
          "type": "checkbox",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "class",
        "props": Object {
          "children": <styled.span>
            <Unknown
              height={50}
            />
          </styled.span>,
          "disabled": false,
          "labelBeforeCheckbox": true,
          "size": 100,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "children": <Unknown
              height={50}
            />,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": null,
            "nodeType": "function",
            "props": Object {
              "height": 50,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
      " ",
      "test",
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <styled.input
            disabled={false}
            id="test"
            model={undefined}
            type="checkbox"
          />,
          <styled.span
            disabled={false}
            labelBeforeCheckbox={true}
            size={100}
          >
            <styled.span>
              <Unknown
                height={50}
              />
            </styled.span>
          </styled.span>,
          " ",
          "test",
        ],
        "disabled": false,
        "htmlFor": "test",
        "leftPadding": 0,
        "rightPadding": 25,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "disabled": false,
            "id": "test",
            "model": undefined,
            "type": "checkbox",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "children": <styled.span>
              <Unknown
                height={50}
              />
            </styled.span>,
            "disabled": false,
            "labelBeforeCheckbox": true,
            "size": 100,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": null,
            "nodeType": "class",
            "props": Object {
              "children": <Unknown
                height={50}
              />,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": null,
              "nodeType": "function",
              "props": Object {
                "height": 50,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
        " ",
        "test",
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
